start CI configuration.
currently, this creates a CI action that starts a vm, installs ruby, and runs rubocop with a basic configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,10 @@
 !/log/.keep
 /tmp
 
+# Ignore temporary rubocop config (if generated).
+/.rubocop_todo.yml
+
+# Ignore logs and IDE-related files
 /log/*
 /.idea/*
+
