--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Install gems
       run: bundle install
     - name: Run Rubocop
-      run: bundle exec rubocop
+      run: bundle exec rake rubocop:test
 
